Fixed anchor jumps (hash), little code cleaning, finalized tabindex

--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,11 @@ body.is-active {
 
 body, button, input, optgroup, select, textarea {
   font-family: "FreeSans", Helvetica, Arial, "DejaVu Sans",  sans-serif;
+  border: none;
+}
+
+button:focus, button:active, button:active, button:after, button::before, button:active:after {
+  border: none;
 }
 
 /* ONBOARDING */
@@ -40,22 +45,21 @@ body, button, input, optgroup, select, textarea {
   display: flex;
 }
 
+#onboardingContainer p {
+    margin: .5em;
+}
+
+#onboardingContainer .fa-file-alt {
+  font-size: 8em;
+}
+
 #onboardingContainer .title.is-1 {
-  margin-bottom: .65em;
+  margin: .5em 0 .25em 0;
+  color: #4a4a4a;
 }
 
 #onboardingContainer .btnLoadTodoFile {
   font-size: 1em;
-}
-
-/* MODAL */
-
-.modal {
-  z-index: 110;
-}
-
-.modal .modal-background {
-  background: rgba(0,0,0,.25);
 }
 
 /* Vertical menu */
@@ -76,25 +80,23 @@ nav ul {
   background: #f5f5f5;
 }
 
-nav ul li {
+nav ul li a {
   width: 5em;
   height: 5em;
   position: relative;
   display: block;
-	/*text-indent: -500em;*/
+
+	cursor: pointer;
 
 	line-height: 5em;
 	text-align: center;
 	color: #404040;
 
 	border-bottom: 1px solid rgba(0,0,0,0.05);
-
-	/*-webkit-transition: background 0.1s ease-in-out;
-	-moz-transition: background 0.1s ease-in-out;
-	transition: background 0.1s ease-in-out;*/
 }
 
 nav ul li:hover,
+nav ul li:focus,
 nav ul li.is-highlighted {
   background: #ebebeb;
 }
@@ -109,17 +111,6 @@ nav ul li#btnFilter.is-active {
   display: block;
 }
 
-nav ul li a {
-  width: 5em;
-  height: 5em;
-
-  display: block;
-  overflow: hidden;
-
-  cursor: pointer;
-  color: #404040;
-}
-
 nav ul li.logo {
   background: #404040;
   color: #fff;
@@ -127,12 +118,15 @@ nav ul li.logo {
   font-size: 1em;
   font-weight: 1000;
   line-height: 5em;
+  text-align: center;
+
+  cursor: default;
 }
 
 /* FILTER DROPDOWN */
 
 #filterDropdown {
-  width: 35em;
+  width: 34em;
   height: 100%;
 
   position: fixed;
@@ -255,20 +249,7 @@ nav ul li.logo {
     padding-left: 0;
 }
 
-/*.dropdown-menu {
-  width: 50em;
-}*/
-
 /* TABLE */
-
-#todoTable {
-  width: 100%;
-  display: none;
-}
-
-#todoTable.is-active {
-  display:flex;
-}
 
 .flex-table {
   display: flex;
@@ -318,6 +299,10 @@ nav ul li.logo {
   cursor: pointer;
 }
 
+.flex-table .flex-row.checkbox a {
+  color: #4a4a4a;
+}
+
 .flex-table .flex-row[role="cell"] span.tag {
   margin-left: .5em;
 }
@@ -352,7 +337,9 @@ nav ul li.logo {
 }
 
 .flex-table .flex-row.text[role="cell"] .itemExternalLink {
-  color: hsl(0, 0%, 71%);
+  /*color: hsl(0, 0%, 71%);*/
+  color: #3273dc;
+  padding: .3em;
 }
 
 .flex-table .flex-row.text[role="cell"] .itemExternalLink:hover {
@@ -384,9 +371,10 @@ nav ul li.logo {
 
 /* Hide default HTML checkbox */
 .switch input {
- opacity: 0;
- width: 0;
- height: 0;
+ opacity: 1;
+ width: 56px;
+ height: 31px;
+ background: none;
 }
 
 /* The slider */
@@ -407,7 +395,7 @@ nav ul li.logo {
  content: "";
  height: 25px;
  width: 25px;
- left: 4px;
+ left: 3px;
  bottom: 3px;
  background-color: white;
  -webkit-transition: .4s;
@@ -439,6 +427,14 @@ input:checked + .slider:before {
 
 /* MODAL FORM */
 
+#modalForm.is-active {
+  z-index: 110;
+}
+
+#modalForm .modal-background {
+  background: rgba(0,0,0,.25);
+}
+
 #modalForm .message {
   display: none;
   margin: 1em 0;
@@ -461,6 +457,18 @@ input:checked + .slider:before {
   display: block;
 }
 
+#modalForm button {
+  font-size: 1em;
+  background: none;
+  color: #3273dc;
+  border: none;
+  border-right: 1px solid #ededed;
+}
+
+#modalForm button:hover {
+  color: #000;
+}
+
 /* MEDIA QUERIES */
 
 @media (max-width: 1023px) {
@@ -476,11 +484,6 @@ input:checked + .slider:before {
     width: 3.5em;
     height: 3.5em;
   	line-height: 3.5em;
-  }
-
-  nav ul li a {
-    width: 3.5em;
-    height: 3.5em;
   }
 
   nav ul li.logo {
